<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".park1">

    <include layout="@layout/content_park1" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/info_fab"
        android:onClick="show_custom_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_menu_info_details"
        android:contentDescription="@string/info_dialog_box" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/return_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_menu_revert"
        android:contentDescription="@string/revert_sign" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.EGG.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/Theme.EGG.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray"
            android:layout_marginBottom="@dimen/relative_layout_margin_vertical">

            <LinearLayout
                android:id="@id/linear_layout_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_toEndOf="@id/arrow_1"
                android:layout_toRightOf="@id/arrow_1">

                <TextView
                    android:id="@+id/box1"
                    android:layout_width="@dimen/box_size_park_1"
                    android:layout_height="@dimen/box_size_park_1"
                    android:textColor="@color/white"
                    android:text="@string/box_1_parking_1_text"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/arrow_margin"
                    android:layout_marginLeft="@dimen/arrow_margin"
                    android:layout_marginStart="@dimen/arrow_margin"
                    android:background="@drawable/box_style" />

                <TextView
                    android:id="@+id/box2"
                    android:layout_width="@dimen/box_size_park_1"
                    android:layout_height="@dimen/box_size_park_1"
                    android:textColor="@color/white"
                    android:text="@string/box_2_parking_1_text"
                    android:gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="@dimen/arrow_margin"
                    android:background="@drawable/box_style"/>

                <TextView
                    android:id="@+id/box3"
                    android:layout_width="@dimen/box_size_park_1"
                    android:layout_height="@dimen/box_size_park_1"
                    android:textColor="@color/red"
                    android:text="@string/box_3_parking_1_text"
                    android:gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="@dimen/arrow_margin"
                    android:background="@drawable/box_style_off_limits" />

            </LinearLayout>

            <TextView
                android:id="@+id/arrow_1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="@dimen/arrow_margin"
                android:background="@drawable/ic_baseline_arrow_downward_24"/>

            <TextView
                android:id="@+id/arrow_2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="@dimen/arrow_margin"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:background="@drawable/ic_baseline_arrow_downward_24" />

            <TextView
                android:id="@+id/park_space_1"
                android:layout_width="@dimen/park_space_width"
                android:layout_height="@dimen/park_space_height"
                android:layout_alignStart="@+id/linear_layout_1"
                android:layout_alignLeft="@+id/linear_layout_1"
                android:layout_above="@id/park_space_2"
                android:background="@drawable/park_state_available" />

            <TextView
                android:id="@+id/park_space_2"
                android:layout_width="@dimen/park_space_width"
                android:layout_height="@dimen/park_space_height"
                android:layout_above="@id/park_space_3"
                android:layout_alignStart="@+id/linear_layout_1"
                android:layout_alignLeft="@+id/linear_layout_1"
                android:background="@drawable/park_state_available" />

            <TextView
                android:id="@+id/park_space_3"
                android:layout_width="@dimen/park_space_width"
                android:layout_height="@dimen/park_space_height"
                android:layout_alignStart="@+id/linear_layout_1"
                android:layout_alignLeft="@+id/linear_layout_1"
                android:layout_above="@id/linear_layout_2"
                android:layout_marginBottom="40dp"
                android:background="@drawable/park_state_available" />

            <LinearLayout
                android:id="@+id/linear_layout_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_toEndOf="@id/arrow_2"
                android:layout_toRightOf="@id/arrow_2"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/box4"
                    android:layout_width="@dimen/box_size_park_1"
                    android:layout_height="@dimen/box_size_park_1"
                    android:textColor="@color/white"
                    android:text="@string/box_1_parking_1_text"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/arrow_margin"
                    android:layout_marginLeft="@dimen/arrow_margin"
                    android:layout_marginStart="@dimen/arrow_margin"
                    android:background="@drawable/box_style" />

                <TextView
                    android:id="@+id/box5"
                    android:layout_width="@dimen/box_size_park_1"
                    android:layout_height="@dimen/box_size_park_1"
                    android:textColor="@color/white"
                    android:text="@string/box_5_parking_1_text"
                    android:gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="@dimen/arrow_margin"
                    android:background="@drawable/box_style" />

                <TextView
                    android:id="@+id/box6"
                    android:layout_width="@dimen/box_size_park_1"
                    android:layout_height="@dimen/box_size_park_1"
                    android:textColor="@color/white"
                    android:text="@string/box_6_parking_1_text"
                    android:gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="@dimen/arrow_margin"
                    android:background="@drawable/box_style" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
